~ Fixed a Bug with PointsArray so that Graph doesn't double ~ Fixed a Bug with Null Pointers. Replaced the Null Point with 0 Value instead ~ Fixed File Selection, now properly selects the file ~ Added Extra Samples

--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -43,6 +43,16 @@
     </LinearLayout>
 
 
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:entries="@array/exercise"
+        app:layout_constraintBottom_toTopOf="@+id/chart1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/LinearLayButton" />
+
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart1"
         android:layout_width="407dp"
