--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -8,9 +8,9 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="401dp"
-        android:layout_height="38dp"
-        android:background="#5271B355"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#523F8693"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="Email:"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtFirstname" />
 
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="Sex:"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/txtEmail"
         app:layout_constraintStart_toStartOf="@+id/txtEmail"
         app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Age:"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/txtSex"
         app:layout_constraintHorizontal_bias="0.533"
         app:layout_constraintStart_toStartOf="@+id/txtSex"
@@ -57,7 +57,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="Shawn"
-        android:textSize="30sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
 
@@ -65,10 +65,10 @@
         android:id="@+id/txtLastname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="24dp"
         android:text="Chen"
-        android:textSize="30sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/txtFirstname"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
 
@@ -83,7 +83,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="175dp"
         android:orientation="horizontal"
         android:padding="10dp"
@@ -96,75 +96,31 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:layout_weight="1"
+            android:background="@drawable/crunchmap"
             app:contentPadding="10dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="170dp"
-                    android:layout_height="110dp"
-                    android:background="#615E5E"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/main_icon" />
+                android:layout_height="match_parent"
+                android:background="@drawable/crunchmap"
+                android:backgroundTintMode="src_over"
+                android:drawingCacheQuality="auto"
+                android:foregroundTint="@color/black">
 
                 <TextView
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Health"
-                    android:textColor="#CAC9C9"
+                    android:text="Health Dashboard"
+                    android:textColor="#E6E0E0"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            app:cardBackgroundColor="#5C2828"
-            app:contentPadding="10dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="152dp"
-                android:layout_height="108dp">
-
-                <ImageView
-                    android:id="@+id/imageV10"
-                    android:layout_width="170dp"
-                    android:layout_height="110dp"
-                    android:background="#616060"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/chart_icon" />
-
-                <TextView
-                    android:id="@+id/textV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Analysis"
-                    android:textColor="#CAC9C9"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintVertical_bias="0.012" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
@@ -185,75 +141,28 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:layout_weight="1"
+            android:background="@drawable/chart_icon"
             app:contentPadding="10dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="170dp"
-                    android:layout_height="110dp"
-                    android:background="#615E5E"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/main_icon" />
+                android:layout_height="match_parent"
+                android:background="@drawable/pushup">
 
                 <TextView
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Budgeting"
+                    android:text="Exercise Estimation"
                     android:textColor="#CAC9C9"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            app:cardBackgroundColor="#5C2828"
-            app:contentPadding="10dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="152dp"
-                android:layout_height="108dp">
-
-                <ImageView
-                    android:id="@+id/imageV11"
-                    android:layout_width="170dp"
-                    android:layout_height="110dp"
-                    android:background="#616060"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.934"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/chart_icon" />
-
-                <TextView
-                    android:id="@+id/textV3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Analysis"
-                    android:textColor="#CAC9C9"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintVertical_bias="0.024" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
@@ -274,6 +183,7 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:layout_weight="1"
+            android:background="@drawable/pushup"
             app:contentPadding="10dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -304,45 +214,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            app:cardBackgroundColor="#5C2828"
-            app:contentPadding="10dp">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="152dp"
-                android:layout_height="108dp">
-
-                <ImageView
-                    android:id="@+id/imageV21"
-                    android:layout_width="170dp"
-                    android:layout_height="110dp"
-                    android:background="#616060"
-                    android:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/chart_icon" />
-
-                <TextView
-                    android:id="@+id/textV31"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Analysis"
-                    android:textColor="#CAC9C9"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
