--- a/app/src/main/res/values/exercises.xml
+++ b/app/src/main/res/values/exercises.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="exercise">
         <item>Squats</item>
-        <item>JumpingJacks</item>
+        <item>JumpingJack</item>
         <item>KneeToElbow</item>
     </string-array>
 
