~Clarified FileNames and their purposes     ~Adjusted Persons, Walks ~CHanged from using UserID to Email as Primary search ~added an Offline Option

--- a/app/src/main/res/layout/activity_mainmenu.xml
+++ b/app/src/main/res/layout/activity_mainmenu.xml
@@ -105,7 +105,8 @@
                 android:background="@drawable/crunchmap"
                 android:backgroundTintMode="src_over"
                 android:drawingCacheQuality="auto"
-                android:foregroundTint="@color/black">
+                android:foregroundTint="@color/black"
+                android:onClick="OnOpenMonitor">
 
                 <TextView
                     android:id="@+id/textView2"
