--- a/app/src/main/res/values/exercises.xml
+++ b/app/src/main/res/values/exercises.xml
@@ -3,7 +3,7 @@
     <string-array name="exercise">
         <item>Squats</item>
         <item>JumpingJack</item>
-        <item>KneeToElbow</item>
+        <item>HighKnee</item>
     </string-array>
 
 </resources>
